--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
   adobe_xd: ^2.0.0+1
+  path_provider: ^2.0.2
+  permission_handler: ^8.0.1
+  ext_storage: ^1.0.3
 
 dev_dependencies:
   flutter_test:
