--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,13 +33,7 @@ dependencies:
   email_validator: ^2.0.1
   firebase_core: ^1.2.0
   modal_progress_hud: ^0.1.3
-  # firebase_database: ^4.4.0
-  # google_sign_in: ^4.4.3
-  # flutter_facebook_login: ^3.0.0
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  alan_voice: ^2.2.0
   cupertino_icons: ^1.0.0
   adobe_xd: ^2.0.0+1
   path_provider: ^2.0.2
